--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.show-sql=true
 
 jwt.secret=iamthesecretcodeforjwt
 
-#email.apikey=${SENDGRID_KEY}
-email.sender=201130@juitsolan.in
+email.apikey=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
+email.sender=tiwarivedant.1690@gmail.com
